feat: orchestration order processing with user validation, stock management, and payment handling